Cleaned up lots of Major coding violations. Implemented get Integer and Long parameters by name in the xtce model.